--- a/classes.ipynb
+++ b/classes.ipynb
@@ -1,104 +1,162 @@
-import numpy as np
-import random
-import matplotlib.pyplot as plt
-import time
-from tqdm import tqdm
-from math import isclose
-from random import randint
-
-timeDiff = 1e-1
-timeEnd = 10
-
-class CosmicBody:
-    array = []
-    shouldDestroyed = False
-    
-    def __init__(self, mass: float, speed: np.ndarray, position: np.ndarray):
-        self.mass = mass
-        self.speed = speed
-        self.position = position
-        self.route = [position]
-        
-    def move(self, timeDiff: float):
-        '''Просчитывает положение тела через время timeDiff'''
-        # Расчёт гравитационных взаимодействий
-        deltaSpeed = np.zeros(3)
-        
-        for body in CosmicBody.array:
-            # На самого себя сила тяготения не действует
-            if body == self:
-                continue
-                
-            # Расчёт изменения скорости от силы тяготения
-            r = body.position - self.position
-            
-            rLength = (r[0] ** 2 + r[1] ** 2 + r[2] ** 2) ** 0.5
-            deltaSpeed = deltaSpeed + r * body.mass / rLength ** 3 * timeDiff
-            
-        deltaSpeed = deltaSpeed * 6.6743015 / (10 ** 11)
-        
-        # Изменение положения в пространстве
-        self.position = self.position + self.speed * timeDiff + deltaSpeed * (timeDiff ** 2) / 2
-        
-        # Запись новой позиции в путь для построения на графике
-        self.route.append(self.position)
-        
-        self.collision()
-        self.destroy()
-        
-    def draw(self, ax):
-        '''Отрисовывает пути и точки пройденные телом'''
-        # Преобразование массива векторов к массивам с координатами для matplotlib
-        xs = []
-        ys = []
-        zs = []
-        for point in self.route:
-            xs.append(point[0])
-            ys.append(point[1])
-            zs.append(point[2])
-        
-        ax.plot(xs, ys, zs)
-        ax.scatter(xs, ys, zs)
-        
-    def collision(self):
-        '''Обрабатывает столкновения тел'''
-        for body in CosmicBody.array:
-            
-            if body == self:
-                continue
-            
-            a = self.route[-1]
-            b = self.route[-2] if len(self.route) >= 2 else a
-            
-            # Если объект прошёл через другой - значит последние точки первого лежат
-            # слева и справа от координат второго
-            
-            # Расчёт левой и правой точек
-            xLeft = min(a[0], b[0])
-            xRight = max(a[0], b[0])
-            yLeft = min(a[1], b[1])
-            yRight = max(a[1], b[1])
-            zLeft = min(a[2], b[2])
-            zRight = max(a[2], b[2])
-            
-            #Проверка на прохождение через объект
-            if xLeft <= body.position[0] <= xRight and \
-            yLeft <= body.position[1] <= yRight and \
-            zLeft <= body.position[2] <= zRight:
-                # Уничтожается объект с наименьшей массой
-                if self.mass < body.mass:
-                    self.route[-1] = body.position
-                    self.shouldDestroyed = True
-                else:
-                    body.shouldDestroyed = True
-                
-    def destroy(self):
-        '''Уничтожает объект если shouldDestroyed = True'''
-        if(self.shouldDestroyed):
-            CosmicBody.array.remove(self)
-            
-class Star(CosmicBody):
-    '''Звезда - такое же космическое тело, только нулевой скоростью и нулевыми координатами'''
-    def __init__(self, mass: float):
-        super().__init__(mass, np.zeros((3)), np.zeros((3)))
-        
+{
+ "клетки" : [
+  {
+   "cell_type" : " код " ,
+   "execution_count" : 5 ,
+   "id" : " 65328430 " ,
+   "метаданные" : {},
+   "выходы" : [],
+   "источник" : [
+    " импортировать numpy как np \ n " ,
+    " импортировать случайный \ n " ,
+    " импортировать matplotlib.pyplot как plt \ n " ,
+    " время импорта \ n " ,
+    " из tqdm import tqdm \ n " ,
+    " из математического импорта близко \ n " ,
+    " из случайного импорта randint "
+   ]
+  },
+  {
+   "cell_type" : " код " ,
+   "execution_count" : 6 ,
+   "id" : " 9c5fc24a " ,
+   "метаданные" : {},
+   "выходы" : [],
+   "источник" : [
+    " timeDiff = 1e-1 \ n " ,
+    " timeEnd = 10 "
+   ]
+  },
+  {
+   "cell_type" : " код " ,
+   "execution_count" : 7 ,
+   "id" : " 2e62d0c2 " ,
+   "метаданные" : {},
+   "выходы" : [],
+   "источник" : [
+    " класс CosmicBody: \ n " ,
+    "     array = [] \ n " ,
+    "     shouldDestroyed = False \ n " ,
+    "     \ п " ,
+    "     def __init __ (self, mass: float, speed: np.ndarray, position: np.ndarray): \ n " ,
+    "         self.mass = масса \ п " ,
+    "         self.speed = скорость \ n " ,
+    "         self.position = position \ n " ,
+    "         self.route = [позиция] \ n " ,
+    "         \ п " ,
+    "     def move (self, timeDiff: float): \ n " ,
+    "         '' 'Просчитывает положение тела через время timeDiff' '' \ n " ,
+    "         # Расчёт гравитационных взаимодействий \ n " ,
+    "         deltaSpeed ​​= np.zeros (3) \ n " ,
+    "         \ п " ,
+    "         для тела в CosmicBody.array: \ n " ,
+    "             # На самого себя сила тяготения не действует \ n " ,
+    "             если body == self: \ n " ,
+    "                 продолжить \ п " ,
+    "                 \ п " ,
+    "             # Расчёт изменения скорости от силы тяготения \ n " ,
+    "             r = body.position - собственное положение \ n " ,
+    "             \ п " ,
+    "             rLength = (r [0] ** 2 + r [1] ** 2 + r [2] ** 2) ** 0,5 \ n » ,
+    "             deltaSpeed ​​= deltaSpeed ​​+ r * body.mass / rLength ** 3 * timeDiff \ n " ,
+    "             \ п " ,
+    "         deltaSpeed ​​= deltaSpeed ​​* 6.6743015 / (10 ** 11) \ n " ,
+    "         \ п " ,
+    "         # Изменение положения в фотографии \ n " ,
+    "         self.position = self.position + self.speed * timeDiff + deltaSpeed ​​* (timeDiff ** 2) / 2 \ n " ,
+    "         \ п " ,
+    "         # Запись новой позиции в путь для построения на графике \ n " ,
+    "         self.route.append (самопозиция) \ n " ,
+    "         \ п " ,
+    "         self.collision () \ n " ,
+    "         self.destroy () \ n " ,
+    "         \ п " ,
+    "     def draw (self, ax): \ n " ,
+    "         '' 'Отрисовывает пути и точки пройденные телом' '' \ n " ,
+    "         # Преобразование массива векторов к массивам с координатами для matplotlib \ n " ,
+    "         xs = [] \ n " ,
+    "         ys = [] \ n " ,
+    "         zs = [] \ n " ,
+    "         для точки в self.route: \ n " ,
+    "             xs.append (точка [0]) \ n " ,
+    "             ys.append (point [1]) \ n " ,
+    "             zs.append (точка [2]) \ n " ,
+    "         \ п " ,
+    "         ax.plot (xs, ys, zs) \ n " ,
+    "         ax.scatter (xs, ys, zs) \ n " ,
+    "         \ п " ,
+    "     def collision (self): \ n " ,
+    "         '' 'Обрабатывает столкновение тел' '' \ n " ,
+    "         для тела в CosmicBody.array: \ n " ,
+    "             \ п " ,
+    "             если body == self: \ n " ,
+    "                 продолжить \ п " ,
+    "             \ п " ,
+    "             a = self.route [-1] \ n " ,
+    "             b = self.route [-2] if len (self.route)> = 2 else a \ n " ,
+    "             \ п " ,
+    "             # Если объект прошёл через другой - значит последние точки первого лежат \ n " ,
+    "             # слева и справа от координат второго \ n " ,
+    "             \ п " ,
+    "             # Расчёт левой и правой точек \ n " ,
+    "             xLeft = min (a [0], b [0]) \ n " ,
+    "             xRight = max (a [0], b [0]) \ n " ,
+    "             yLeft = min (a [1], b [1]) \ n " ,
+    "             yRight = max (a [1], b [1]) \ n " ,
+    "             zLeft = min (a [2], b [2]) \ n " ,
+    "             zRight = max (a [2], b [2]) \ n " ,
+    "             \ п " ,
+    "             # Проверка на прохождение через объект \ n " ,
+    "             если xLeft <= body.position [0] <= xRight и \\\ n " ,
+    "             yLeft <= body.position [1] <= yRight and \\\ n " ,
+    "             zLeft <= body.position [2] <= zRight: \ n " ,
+    "                 # Уничтожается объект с наименьшей массой \ n " ,
+    "                 если self.mass <body.mass: \ n " ,
+    "                     self.route [-1] = body.position \ n " ,
+    "                     self.shouldDestroyed = True \ n " ,
+    "                 else: \ n " ,
+    "                     body.shouldDestroyed = True \ n " ,
+    "                 \ п " ,
+    "     def destroy (self): \ n " ,
+    "         '' 'Уничтожает объект если shouldDestroyed = True' '' \ n " ,
+    "         если (self.shouldDestroyed): \ n " ,
+    "             CosmicBody.array.remove (self) \ n " ,
+    "             "
+   ]
+  },
+  {
+   "cell_type" : " код " ,
+   "execution_count" : 8 ,
+   "id" : " e2e497ae " ,
+   "метаданные" : {},
+   "выходы" : [],
+   "источник" : [
+    " звезда класса (CosmicBody): \ n " ,
+    "     '' 'Звезда - такое же космическое, только нулевой скоростью и нулевыми координатами' '' \ n " ,
+    "     def __init __ (self, mass: float): \ n " ,
+    "         super () .__ init __ (масса, np.zeros ((3)), np.zeros ((3))) "
+   ]
+  }
+ ],
+ "метаданные" : {
+  "kernelspec" : {
+   "display_name" : " Python 3 " ,
+   "язык" : " питон " ,
+   "имя" : " питон3 "
+  },
+  "language_info" : {
+   "codemirror_mode" : {
+    "имя" : " ipython " ,
+    «версия» : 3
+   },
+   "расширение_файла" : " .py " ,
+   "mimetype" : " текст / x-python " ,
+   "имя" : " питон " ,
+   "nbconvert_exporter" : " питон " ,
+   "pygments_lexer" : " ipython3 " ,
+   "версия" : " 3.8.8 "
+  }
+ },
+ «nbformat» : 4 ,
+ «nbformat_minor» : 5
+}
