--- a/Gravitation/gamestarted.ipynb
+++ b/Gravitation/gamestarted.ipynb
@@ -41,10 +41,25 @@
         "        self.r = r\n",
         "        self.trajectory = None\n",
         "        self.history_r = np.array(self.r, dtype=np.float64)\n",
-        "        self.name = name\n"
+        "        self.name = name\n",
+        "\n",
+        "\n",
+        "def kinetik_energy(self)->np.float64:\n",
+        "      return self.mass * np.linalg.norm(self.speed)**2/2"
       ],
       "metadata": {
         "id": "mdq8jj-HswBj"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "Cq8Lp9daug8c"
       },
       "execution_count": null,
       "outputs": []
