Two bodies energy added

--- a/Gravitation/gamestarted.ipynb
+++ b/Gravitation/gamestarted.ipynb
@@ -45,7 +45,11 @@
         "\n",
         "\n",
         "def kinetik_energy(self)->np.float64:\n",
-        "      return self.mass * np.linalg.norm(self.speed)**2/2"
+        "      return self.mass * np.linalg.norm(self.speed)**2/2\n",
+        "\n",
+        "\n",
+        "def energy_between_two_bodies(m0:float, m1: float, r0:np.ndarray, r1:np.ndarray) -> np.float64:\n",
+        "      return -G * m0 * m1 / np.linalg.norm(r0 - r1)"
       ],
       "metadata": {
         "id": "mdq8jj-HswBj"
