Various Energy calculus added

--- a/Gravitation/gamestarted.ipynb
+++ b/Gravitation/gamestarted.ipynb
@@ -18,7 +18,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "KPjNGM9Ksr5z"
       },
@@ -35,7 +35,7 @@
       "cell_type": "code",
       "source": [
         "class CosmicBody:\n",
-        "    def __init__(self, mass: float, r: np.ndarray, speed: np.ndarray, name: str):\n",
+        "    def __init__(self, mass: np.float64, r: np.ndarray, speed: np.ndarray, name: str):\n",
         "        self.mass = mass\n",
         "        self.speed = speed\n",
         "        self.r = r\n",
@@ -48,13 +48,35 @@
         "      return self.mass * np.linalg.norm(self.speed)**2/2\n",
         "\n",
         "\n",
-        "def energy_between_two_bodies(m0:float, m1: float, r0:np.ndarray, r1:np.ndarray) -> np.float64:\n",
-        "      return -G * m0 * m1 / np.linalg.norm(r0 - r1)"
+        "def energy_between_two_bodies(m0: np.float64, m1: np.float64, r0:np.ndarray, r1:np.ndarray) -> np.float64:\n",
+        "      return -G * m0 * m1 / np.linalg.norm(r0 - r1)\n",
+        "\n",
+        "\n",
+        "def dv_(m : np.float64, r1 : np.ndarray, r2 : np.ndarray) -> np.float64:\n",
+        "      return -dt * G * m * (r2 - r1) / np.linalg.norm(r2 - r1)**3\n",
+        "\n",
+        "\n",
+        "def full_energy(b: list) -> np.float64:\n",
+        "      E = 0\n",
+        "      for i in range(len(b)):\n",
+        "          point = i+1\n",
+        "          E += b[i].kinetik_energy()\n",
+        "          while (point < len(b)):\n",
+        "              E += energy_between_two_bodies(b[i].mass, b[point].mass, b[i].r, b[point].r)\n",
+        "              point+=1\n",
+        "      return np.fabs(E)\n",
+        "\n",
+        "\n",
+        "def P_energy(i, b : list)-> np.float64:\n",
+        "      P = 0\n",
+        "      for j in b:\n",
+        "        P+= G * i.mass * j.mass / np.linalg.norm(i.r-j.r)\n",
+        "      return P\n"
       ],
       "metadata": {
         "id": "mdq8jj-HswBj"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -65,7 +87,7 @@
       "metadata": {
         "id": "Cq8Lp9daug8c"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     }
   ]
