--- a/Gravitation/gamestarted.ipynb
+++ b/Gravitation/gamestarted.ipynb
@@ -82,12 +82,38 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "def dt_pass(b: list):\n",
+        "      for i in range(len(b)):\n",
+        "          for j in range(len(b)):\n",
+        "              if (j != i):\n",
+        "                  b[i].speed += dv_(b[j].mass, b[j].r, b[i].r)\n",
+        "          b[i].r += b[i].speed * dt\n",
+        "          b[i].history_r = np.vstack((b[i].history_r, b[i].r))\n",
+        "\n",
+        "     # УНИЧТОЖИТЬ\n",
+        "      for j in range(len(b)):\n",
+        "          k = j+1\n",
+        "          while k < len(b):\n",
+        "              if (np.fabs(b[j].r - b[k].r) < 0.1).sum() == 3:\n",
+        "                  b.remove(b[j])\n",
+        "                  b.remove(b[k])\n",
+        "              k += 1"
       ],
       "metadata": {
         "id": "Cq8Lp9daug8c"
       },
       "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "Yo9SPbEOC6w6"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
