Main loop added also some fixes

--- a/Gravitation/gamestarted.ipynb
+++ b/Gravitation/gamestarted.ipynb
@@ -48,6 +48,22 @@
         "      return self.mass * np.linalg.norm(self.speed)**2/2\n",
         "\n",
         "\n",
+        "def __str__(self):\n",
+        "      if self.trajectory == None:\n",
+        "          return f'name:{self.name}, mass:{self.mass}, speed:{self.speed}, coordinates:{self.r}'\n",
+        "      else:\n",
+        "          return f'name:{self.name}, mass:{self.mass}, speed:{self.speed}, coordinates:{self.r}, trajectory:{self.trajectory}'\n",
+        "          "
+      ],
+      "metadata": {
+        "id": "mdq8jj-HswBj"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "def energy_between_two_bodies(m0: np.float64, m1: np.float64, r0:np.ndarray, r1:np.ndarray) -> np.float64:\n",
         "      return -G * m0 * m1 / np.linalg.norm(r0 - r1)\n",
         "\n",
@@ -74,9 +90,9 @@
         "      return P\n"
       ],
       "metadata": {
-        "id": "mdq8jj-HswBj"
+        "id": "z4RAvUOaDuvy"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -97,12 +113,37 @@
         "              if (np.fabs(b[j].r - b[k].r) < 0.1).sum() == 3:\n",
         "                  b.remove(b[j])\n",
         "                  b.remove(b[k])\n",
-        "              k += 1"
+        "              k += 1\n",
+        "              "
       ],
       "metadata": {
         "id": "Cq8Lp9daug8c"
       },
       "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def main_loop(b : list, k : np.float64, stop : int, plot=True):\n",
+        "  f = full_energy(b)\n",
+        "  cnt = 0\n",
+        "  while (np.fabs(full_energy(b) - f) < f * k) and (cnt < stop):\n",
+        "      cnt += 1\n",
+        "      dt_pass(b)\n",
+        "  if plot == True:\n",
+        "      fig = plt.figure(figsize=(10,10))\n",
+        "      ax = fig.add_subplot(projection='3d') #тридименсьон\n",
+        "      for x in b:\n",
+        "          ax.scatter(x.history_r[:, 0], x.history_r[:, 1], x.history_r[:, 2], label = x.name) #покоординатно строим график по накопленной истории \n",
+        "      ax.legend() #легенда\n",
+        "      print('number of iterations:{}, initial total energy:{}, final total energy:{}'.format(cnt, round(f,6), round(full_energy(b),6)))\n",
+        "  return cnt"
+      ],
+      "metadata": {
+        "id": "4PbcIxdzEJGS"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
