--- a/Gravitation/gamestarted.ipynb
+++ b/Gravitation/gamestarted.ipynb
@@ -35,6 +35,19 @@
       "cell_type": "code",
       "source": [
         "class CosmicBody:\n",
+        "    \"\"\" \n",
+        "    Класс космического тела\n",
+        "\n",
+        "    Атрибуты:\n",
+        "    1) Масса - _mass_ float64  \n",
+        "    2) Начальная координата - _r_ массив из 3-х чисел \n",
+        "    3) Скорость - _speed_ массив проекций скоростей\n",
+        "    4) Имя - _name_\n",
+        "    \n",
+        "    trajectory - тип траектории (вначале - неопределённый)\n",
+        "    history_r - массив координат, в который побывало тело (n x 3)\n",
+        "\n",
+        "    \"\"\"\n",
         "    def __init__(self, mass: np.float64, r: np.ndarray, speed: np.ndarray, name: str):\n",
         "        self.mass = mass\n",
         "        self.speed = speed\n",
@@ -45,15 +58,22 @@
         "\n",
         "\n",
         "def kinetik_energy(self)->np.float64:\n",
+        "      \"\"\" \n",
+        "      Кинетическая энергия тела вычисляется по формуле mv^2/2\n",
+        "      На выходе получим float64\n",
+        "      \"\"\"\n",
         "      return self.mass * np.linalg.norm(self.speed)**2/2\n",
         "\n",
         "\n",
         "def __str__(self):\n",
+        "      \"\"\" \n",
+        "      Функция возвращающая информацию о теле \n",
+        "      Траектория выводится только, если определена \n",
+        "      \"\"\"\n",
         "      if self.trajectory == None:\n",
         "          return f'name:{self.name}, mass:{self.mass}, speed:{self.speed}, coordinates:{self.r}'\n",
         "      else:\n",
-        "          return f'name:{self.name}, mass:{self.mass}, speed:{self.speed}, coordinates:{self.r}, trajectory:{self.trajectory}'\n",
-        "          "
+        "          return f'name:{self.name}, mass:{self.mass}, speed:{self.speed}, coordinates:{self.r}, trajectory:{self.trajectory}'\n"
       ],
       "metadata": {
         "id": "mdq8jj-HswBj"
@@ -65,6 +85,12 @@
       "cell_type": "code",
       "source": [
         "def energy_between_two_bodies(m0: np.float64, m1: np.float64, r0:np.ndarray, r1:np.ndarray) -> np.float64:\n",
+        "      \"\"\"\n",
+        "      Энергия взаимодействия между двумя конкретными телами \n",
+        "      m0, m1 - массы тел float64\n",
+        "      r0,r1 - координаты тел - np.ndarray\n",
+        "      Выводит float64\n",
+        "      \"\"\"\n",
         "      return -G * m0 * m1 / np.linalg.norm(r0 - r1)\n",
         "\n",
         "\n",
