one object added test

--- a/Gravitation/gamestarted.ipynb
+++ b/Gravitation/gamestarted.ipynb
@@ -95,10 +95,32 @@
         "\n",
         "\n",
         "def dv_(m : np.float64, r1 : np.ndarray, r2 : np.ndarray) -> np.float64:\n",
+        "      \"\"\" \n",
+        "       Прирост скорости за ранее определённый промежуток времени\n",
+        "\n",
+        "       m - масса тела, которое ускоряет np.float64\n",
+        "       r1 - координаты тела, которое ускоряется np.ndarray\n",
+        "       r2 - координаты тела, которое ускоряет np.ndarray\n",
+        "\n",
+        "       Возвращаем np.float64\n",
+        "\n",
+        "      \"\"\"             \n",
         "      return -dt * G * m * (r2 - r1) / np.linalg.norm(r2 - r1)**3\n",
         "\n",
         "\n",
         "def full_energy(b: list) -> np.float64:\n",
+        "      \"\"\" \n",
+        "  Считаем полную энергию системы \n",
+        "  \n",
+        "  Принимаем на вход список всех тел, состоит из CosmicBody\n",
+        "  \n",
+        "  Сначала плюсуем кинетические энергии\n",
+        "  \n",
+        "  Потом плюсуем энергии взаимодействия тел убирая те что уже учли\n",
+        "\n",
+        "  Возвращаем np.float64 по модулю\n",
+        "\n",
+        "      \"\"\"\n",
         "      E = 0\n",
         "      for i in range(len(b)):\n",
         "          point = i+1\n",
@@ -110,6 +132,11 @@
         "\n",
         "\n",
         "def P_energy(i, b : list)-> np.float64:\n",
+        "      \"\"\" \n",
+        "  Считаем потенциальную энергию взаимодействия тела i с телами из списка b\n",
+        "\n",
+        "  Возвращаем np.float64\n",
+        "      \"\"\"\n",
         "      P = 0\n",
         "      for j in b:\n",
         "        P+= G * i.mass * j.mass / np.linalg.norm(i.r-j.r)\n",
@@ -125,6 +152,16 @@
       "cell_type": "code",
       "source": [
         "def dt_pass(b: list):\n",
+        "      \"\"\" \n",
+        "  Функция которая принимаем список всех тел, находящихся в системе\n",
+        "\n",
+        "  Привносит изменение в систему за время dt\n",
+        "\n",
+        "  Меняем скорость, координаты\n",
+        "  Записываем координаты в историю\n",
+        "  Уничтожаем тела если столкнулись\n",
+        "  \n",
+        "      \"\"\"\n",
         "      for i in range(len(b)):\n",
         "          for j in range(len(b)):\n",
         "              if (j != i):\n",
@@ -152,6 +189,17 @@
       "cell_type": "code",
       "source": [
         "def main_loop(b : list, k : np.float64, stop : int, plot=True):\n",
+        "  \"\"\" \n",
+        "  Основной цикл\n",
+        "  b - список всех тем системы list\n",
+        "  k - максимальное отклонение энергии в процентах при котором цикл остановится np.float64\n",
+        "  stop - максимальное количество итераций int\n",
+        "  plot - нужен ли график или нет bool\n",
+        "\n",
+        "  f - полная энергия системы в начальный момент времени\n",
+        "\n",
+        "  Выводит количество итераций\n",
+        "  \"\"\"\n",
         "  f = full_energy(b)\n",
         "  cnt = 0\n",
         "  while (np.fabs(full_energy(b) - f) < f * k) and (cnt < stop):\n",
@@ -175,7 +223,15 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "def one_object():\n",
+        "  \"\"\"\n",
+        "  Тестируем создания одного объекта\n",
+        "  И отрисовку его графика\n",
+        "  \"\"\"\n",
+        "  o0 = CosmicBody(7, np.array([0.,0.,0.]), np.array([1.,1.,0.]), 'o0')\n",
+        "  print(o0)\n",
+        "  main_loop([o0], 0.05, 1000)\n",
+        "one_object()"
       ],
       "metadata": {
         "id": "Yo9SPbEOC6w6"
