--- a/Gravitation/gamestarted.ipynb
+++ b/Gravitation/gamestarted.ipynb
@@ -233,7 +233,6 @@
         "  print(o0)\n",
         "  main_loop([o0], 0.05, 1000)\n",
         "one_object()"
-<<<<<<< HEAD
       ],
       "metadata": {
         "colab": {
@@ -291,9 +290,8 @@
         "          b[i].trajectory = \"hyperbola\"\n",
         "      else:\n",
         "          b[i].trajectory = \"ellips\"\n",
-        "      print(b[i])"
-=======
->>>>>>> 982e44e8b69d722afd5ee7a5ded4673fd388dfff
+        "      print(b[i])\n",
+        "      "
       ],
       "metadata": {
         "id": "aLqSP7R0BNbW"
