--- a/Gravitation/gamestarted.ipynb
+++ b/Gravitation/gamestarted.ipynb
@@ -18,7 +18,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 29,
       "metadata": {
         "id": "KPjNGM9Ksr5z"
       },
@@ -66,25 +66,26 @@
         "      return self.mass * np.linalg.norm(self.speed)**2/2\n",
         "\n",
         "\n",
-        "      def __str__(self):\n",
-        "        \"\"\" \n",
+        "    def __str__(self):\n",
+        "      \"\"\" \n",
         "      Функция возвращающая информацию о теле \n",
         "      Траектория выводится только, если определена \n",
-        "        \"\"\"\n",
-        "        if self.trajectory == None:\n",
-        "            return f'name:{self.name}, mass:{self.mass}, speed:{self.speed}, coordinates:{self.r}'\n",
-        "        else:\n",
-        "            return f'name:{self.name}, mass:{self.mass}, speed:{self.speed}, coordinates:{self.r}, trajectory:{self.trajectory}'\n"
+        "      \"\"\"\n",
+        "      if self.trajectory == None:\n",
+        "          return f'name:{self.name}, mass:{self.mass}, speed:{self.speed}, coordinates:{self.r}'\n",
+        "      else:\n",
+        "          return f'name:{self.name}, mass:{self.mass}, speed:{self.speed}, coordinates:{self.r}, trajectory:{self.trajectory}'\n"
       ],
       "metadata": {
         "id": "mdq8jj-HswBj"
       },
-      "execution_count": 22,
+      "execution_count": 30,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "@nb.njit(fastmath=True, nogil = True)  #Декоратор ускоряющей функции\n",
         "def energy_between_two_bodies(m0: np.float64, m1: np.float64, r0:np.ndarray, r1:np.ndarray) -> np.float64:\n",
         "      \"\"\"\n",
         "      Энергия взаимодействия между двумя конкретными телами \n",
@@ -95,6 +96,7 @@
         "      return -G * m0 * m1 / np.linalg.norm(r0 - r1)\n",
         "\n",
         "\n",
+        "@nb.njit(fastmath=True, nogil = True) #Декоратор ускоряющей функции\n",
         "def dv_(m : np.float64, r1 : np.ndarray, r2 : np.ndarray) -> np.float64:\n",
         "      \"\"\" \n",
         "       Прирост скорости за ранее определённый промежуток времени\n",
@@ -146,7 +148,7 @@
       "metadata": {
         "id": "z4RAvUOaDuvy"
       },
-      "execution_count": 23,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -183,7 +185,7 @@
       "metadata": {
         "id": "Cq8Lp9daug8c"
       },
-      "execution_count": 24,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -218,7 +220,7 @@
       "metadata": {
         "id": "4PbcIxdzEJGS"
       },
-      "execution_count": 25,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -240,15 +242,15 @@
           "height": 610
         },
         "id": "Yo9SPbEOC6w6",
-        "outputId": "89ff98e3-0d73-46ae-b85b-8ff20d214de8"
+        "outputId": "a74db2db-9580-4c60-94b8-c52886c13f6e"
       },
-      "execution_count": 26,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "<__main__.CosmicBody object at 0x7f24a6be7e50>\n",
+            "name:o0, mass:7, speed:[1. 1. 0.], coordinates:[0. 0. 0.]\n",
             "number of iterations:1000, initial total energy:7.0, final total energy:7.0\n"
           ]
         },
@@ -296,7 +298,7 @@
       "metadata": {
         "id": "aLqSP7R0BNbW"
       },
-      "execution_count": 27,
+      "execution_count": 35,
       "outputs": []
     },
     {
@@ -348,9 +350,9 @@
           "height": 782
         },
         "id": "hFXTZvajD8Vu",
-        "outputId": "878c6203-41b5-4c61-daaf-1b04211c5e4a"
+        "outputId": "19e1e706-f15e-4884-dedc-5fdba170b5e1"
       },
-      "execution_count": 28,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "stream",
@@ -364,11 +366,11 @@
           "name": "stdout",
           "text": [
             "number of iterations:400, initial total energy:257.888241, final total energy:256.24214\n",
-            "<__main__.CosmicBody object at 0x7f24a56ac590>\n",
-            "<__main__.CosmicBody object at 0x7f24a56be290>\n",
-            "<__main__.CosmicBody object at 0x7f24a56d8a50>\n",
-            "<__main__.CosmicBody object at 0x7f24a55f6a90>\n",
-            "<__main__.CosmicBody object at 0x7f24a55f6c10>\n"
+            "name:b1, mass:2000, speed:[ 0.00612958 -0.04329662  0.05364759], coordinates:[-0.06520401  0.06127947  0.2452606 ], trajectory:ellips\n",
+            "name:b2, mass:10, speed:[0.02781245 4.8995796  2.93105384], coordinates:[5.10529997 0.05257187 0.25641807], trajectory:ellips\n",
+            "name:b3, mass:10, speed:[-1.26965299  7.38512972  0.86097984], coordinates:[ 2.31005759  1.71075803 -1.19091964], trajectory:ellips\n",
+            "name:b4, mass:10, speed:[-1.81742563  8.34151546 -1.58820437], coordinates:[-1.01207136 27.89189431 -4.50932008], trajectory:hyperbola\n",
+            "name:b5, mass:10, speed:[3.84787042 0.02602828 2.06617957], coordinates:[10.66249668  0.07916969 17.35762985], trajectory:parabola\n"
           ]
         },
         {
@@ -377,7 +379,7 @@
           "text": [
             "\n",
             "----------------------------------------------------------------------\n",
-            "Ran 4 tests in 0.743s\n",
+            "Ran 4 tests in 1.856s\n",
             "\n",
             "OK\n"
           ]
@@ -386,11 +388,11 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<unittest.main.TestProgram at 0x7f24a55f98d0>"
+              "<unittest.main.TestProgram at 0x7f24a5432c90>"
             ]
           },
           "metadata": {},
-          "execution_count": 28
+          "execution_count": 36
         },
         {
           "output_type": "display_data",
