--- a/Gravitation/Gravitation.ipynb
+++ b/Gravitation/Gravitation.ipynb
@@ -25,7 +25,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "@njit(nogil=True, fastmath=True)\n",
+    "@njit(\"Tuple((float64[:], boolean))(float64[:, :], float64[:], float64[:], float64[:], float64)\", \n",
+    "      nogil=True, fastmath=True)\n",
     "def calc_acceleration(bodies_X, bodies_M, bodies_R, X, R):\n",
     "    \"\"\"\n",
     "    Расчет ускорения тела по данным о других телах.\n",
