--- a/FilteredOperations.ipynb
+++ b/FilteredOperations.ipynb
@@ -99,7 +99,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -113,7 +113,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.12 (main, Apr  4 2022, 05:22:27) [MSC v.1916 64 bit (AMD64)]"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "86eb1e4a564685919b2b8aa3eb87820160b4599c11a902938692181984dae4a6"
+   }
   }
  },
  "nbformat": 4,
